[SC-6908] fixed localization, fixed aligning, added dx tag box for multiple values, added attributes section fields, fixed close button navigation

--- a/src/app/pfm/offer-edit/offer-edit.component.less
+++ b/src/app/pfm/offer-edit/offer-edit.component.less
@@ -47,6 +47,7 @@
     /deep/ .main-content {
         padding: 20px;
         .field {
+            align-items: baseline;
             label {
                 font-size: 14px;
                 font-weight: 300;
